--- a/frontend/cargo/index.html
+++ b/frontend/cargo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Global Cargo & Charter Solutions</title>
+    <title>Airrush Charters</title>
   </head>
   <body>
     <div id="root"></div>
